# Matrix_Calculator

./: .gitignore  .gitignore.txt  CMakeLists.txt
include/: LinearSystem.h  Matrix.h  Menu.h
include/utility/: Colors.h
src/: LinearSystem.cpp  Main.cpp  Menu.cpp
src/LinearSystem/: LinearSystem.cpp
src/matrix/: Matrix.cpp
